--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
 
 {% block content %}
 <div class="row justify-content-center">
@@ -20,6 +21,12 @@
                     </div>
                     {% endfor %}
                     <button type="submit" class="btn btn-primary w-100 btn-lg mt-3">Login</button>
+
+                    <div class="mt-3">
+                        <a href="{% provider_login_url 'google' %}" class="btn btn-outline-danger w-100 btn-lg">
+                            Continue with Google
+                        </a>
+                    </div>
                 </form>
                 <div class="text-center mt-4">
                     <p class="text-muted">Don't have an account? <a href="{% url 'register' %}"
