--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 
-<body class="d-flex flex-column min-vh-100" hx-boost="true">
+<body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">Soko Hub</a>
