Creating full password resets and updating hte UI to use the ewxsiting one

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -20,6 +20,10 @@
                         {% endif %}
                     </div>
                     {% endfor %}
+                    <div class="mb-3 text-end">
+                        <a href="{% url 'reset_password' %}" class="small text-muted text-decoration-none">Forgot
+                            Password?</a>
+                    </div>
                     <button type="submit" class="btn btn-primary w-100 btn-lg mt-3">Login</button>
 
                     <div class="mt-3">
