Creating the option for vendor to upload multiple images on a signle product and thier description

--- a/templates/base.html
+++ b/templates/base.html
@@ -146,6 +146,7 @@
             event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
         });
     </script>
+    {% block scripts %}{% endblock %}
 </body>
 
 </html>
