--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -13,10 +13,23 @@
         <div class="row">
             <div class="col-md-6 mb-4">
                 {% if product.image %}
-                <img src="{{ product.image.url }}" class="img-fluid rounded" alt="{{ product.name }}">
+                <img src="{{ product.image.url }}" class="img-fluid rounded mb-3 zoomable" alt="{{ product.name }}"
+                    style="width: 100%; object-fit: cover;">
                 {% else %}
-                <div class="bg-secondary text-white d-flex align-items-center justify-content-center rounded"
+                <div class="bg-secondary text-white d-flex align-items-center justify-content-center rounded mb-3"
                     style="height: 400px;">No Image</div>
+                {% endif %}
+
+                {% if product.additional_images.all %}
+                <div class="row g-2">
+                    {% for img in product.additional_images.all %}
+                    <div class="col-3">
+                        <img src="{{ img.image.url }}" class="img-fluid rounded border zoomable"
+                            alt="{{ img.description }}"
+                            style="height: 80px; width: 100%; object-fit: cover; cursor: pointer;">
+                    </div>
+                    {% endfor %}
+                </div>
                 {% endif %}
             </div>
             <div class="col-md-6">
@@ -51,4 +64,17 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script src="https://unpkg.com/medium-zoom@1.1.0/dist/medium-zoom.min.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        mediumZoom('.zoomable', {
+            margin: 24,
+            background: '#ffffff',
+            scrollOffset: 0,
+        });
+    });
+</script>
 {% endblock %}
