--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <title>Soko Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/star_rating.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <style>
         body {
@@ -279,7 +280,8 @@
                     const payload = {
                         token: chatToken,
                         message: text,
-                        user_id: {{ user.id|default:"null"}}
+                        user_id: {{ user.id|default: "null"
+                }}
         };
 
         const iv = CryptoJS.lib.WordArray.random(16);
